<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/cardboard"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cardboard_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBelajarDashboard" />

    <ImageView
        android:id="@+id/welcome_pict"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="welcome_pict"
        android:src="@drawable/welcome_pict"
        app:layout_constraintBottom_toBottomOf="@+id/cardboard"
        app:layout_constraintEnd_toEndOf="@+id/cardboard" />

    <TextView
        android:id="@+id/textBelajarDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/txtAyoBelajar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSelamatDatangDashboard"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/txtSelamatDatang"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/cardboard"
        app:layout_constraintTop_toTopOf="@+id/cardboard" />

    <TextView
        android:id="@+id/textCariTahuDashboard"
        android:layout_width="162dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txtMariBelajar"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textSelamatDatangDashboard"
        app:layout_constraintTop_toBottomOf="@+id/textSelamatDatangDashboard" />

    <TextView
        android:id="@+id/textCariDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/txtCariTahu"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardboard" />

    <ImageButton
        android:id="@+id/tombolAlfabet"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_alphabet_shape"
        android:contentDescription="@string/txtAlfabet"
        app:layout_constraintStart_toStartOf="@+id/textCariDashboard"
        app:layout_constraintTop_toBottomOf="@+id/textCariDashboard" />

    <ImageView
        android:id="@+id/gambarAlfabet"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/gambar_alphabet_button"
        app:layout_constraintEnd_toEndOf="@+id/tombolAlfabet"
        app:layout_constraintStart_toStartOf="@+id/tombolAlfabet"
        app:layout_constraintTop_toTopOf="@+id/tombolAlfabet" />

    <TextView
        android:id="@+id/deskripsiAlfabet"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txtAlfabet"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/gambarAlfabet"
        app:layout_constraintStart_toStartOf="@+id/gambarAlfabet"
        app:layout_constraintTop_toBottomOf="@+id/gambarAlfabet" />

    <ImageButton
        android:id="@+id/tombolAngka"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_angka__shape"
        android:contentDescription="@string/txtAngka"
        app:layout_constraintEnd_toEndOf="@+id/textCariDashboard"
        app:layout_constraintStart_toEndOf="@+id/tombolAlfabet"
        app:layout_constraintTop_toBottomOf="@+id/textCariDashboard" />

    <ImageView
        android:id="@+id/gambarAngka"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:contentDescription="gambar_angka_button"
        android:src="@drawable/gambar_angka_button"
        app:layout_constraintEnd_toEndOf="@+id/tombolAngka"
        app:layout_constraintStart_toStartOf="@+id/tombolAngka"
        app:layout_constraintTop_toTopOf="@+id/tombolAngka" />

    <TextView
        android:id="@+id/deskripsiAngka"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txtAngka"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/gambarAngka"
        app:layout_constraintStart_toStartOf="@+id/gambarAngka"
        app:layout_constraintTop_toBottomOf="@+id/gambarAngka" />

    <ImageButton
        android:id="@+id/tombolKomnunikasi"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_komunikasi_shape"
        android:contentDescription="@string/txtTips"
        app:layout_constraintStart_toStartOf="@+id/textCariDashboard"
        app:layout_constraintTop_toBottomOf="@+id/tombolAlfabet" />

    <ImageView
        android:id="@+id/gambarKomunikasi"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:contentDescription="gambar_kalimat_button"
        android:src="@drawable/gambar_kalimat_button"
        app:layout_constraintEnd_toEndOf="@+id/tombolKomnunikasi"
        app:layout_constraintStart_toStartOf="@+id/tombolKomnunikasi"
        app:layout_constraintTop_toTopOf="@+id/tombolKomnunikasi" />

    <TextView
        android:id="@+id/deskripsiKomunikasi"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txtTips"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/gambarKomunikasi"
        app:layout_constraintStart_toStartOf="@+id/gambarKomunikasi"
        app:layout_constraintTop_toBottomOf="@+id/gambarKomunikasi" />

    <ImageButton
        android:id="@+id/tombolKamus"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_kamus_shape"
        android:contentDescription="@string/txtSejarah"
        app:layout_constraintEnd_toEndOf="@+id/textCariDashboard"
        app:layout_constraintStart_toEndOf="@+id/tombolKomnunikasi"
        app:layout_constraintTop_toBottomOf="@+id/tombolAngka" />

    <ImageView
        android:id="@+id/gambarKamus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:contentDescription="gambar_kamus_button"
        android:src="@drawable/logo_sejarah"
        app:layout_constraintEnd_toEndOf="@+id/tombolKamus"
        app:layout_constraintStart_toStartOf="@+id/tombolKamus"
        app:layout_constraintTop_toTopOf="@+id/tombolKamus" />

    <TextView
        android:id="@+id/deskripsiKamus"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txtSejarah"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/gambarKamus"
        app:layout_constraintStart_toStartOf="@+id/gambarKamus"
        app:layout_constraintTop_toBottomOf="@+id/gambarKamus" />


    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bulat_profil"
        app:layout_constraintBottom_toBottomOf="@+id/textBelajarDashboard"
        app:layout_constraintStart_toEndOf="@+id/textBelajarDashboard"
        app:layout_constraintTop_toTopOf="@+id/textBelajarDashboard"
        app:srcCompat="@drawable/icon_user" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>